--- a/index.html
+++ b/index.html
@@ -492,8 +492,7 @@
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx" />
               <svg class="input-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone-black"></use></svg
-            ></span>
+                <use href="./images/icons.svg#icon-phone-black"></use></svg></span>
           </label>
           <label class="modal-form-field">
             <span class="input-description">Email</span>
@@ -505,8 +504,7 @@
                 required
                 pattern="" />
               <svg class="input-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-email-black"></use></svg
-            ></span>
+                <use href="./images/icons.svg#icon-email-black"></use></svg></span>
           </label>
           <label class="modal-form-field">
             <span class="input-description">Comment</span>
@@ -516,14 +514,11 @@
               placeholder="Text input"
             ></textarea>
           </label>
-          <input
-            id="user-policy"
-            type="checkbox"
-            name="user-policy"
-            class="modal-form-checkbox visually-hidden"
-          />
-          <label for="user-policy" class="checkbox-description"
-            >I accept the terms and conditions of the&nbsp;
+         
+          <label for="user-policy" class="checkbox-description">
+            <input type="checkbox" class="modal-form-check visually-hidden">
+<span class="checkbox-form"></span>
+            I accept the terms and conditions of the&nbsp;
             <a href="">Privacy Policy</a>
           </label>
           <button type="submit" class="modal-form-submit">Send</button>
