--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             </li>
           </ul>
         </div>
-        <div class footer-subscribe-container>
+        <div class="footer-subscribe-container">
           <p class="footer-subscribe-paragraph">Subscribe</p>
           <form class="footer-modal-form-field">
             <input
@@ -444,10 +444,11 @@
               placeholder="E-mail"
             />
 
-            <button type="submit" class="modal-form-submit">Subscribe</button>
+            <button type="submit" class="modal-form-submit">Subscribe
             <svg class="subscribe-icon" width="24" height="24">
-              <use href="./images/"></use>
+              <use href="./images/icons.svg#icon-telegram"></use>
             </svg>
+          </button>
           </form>
         </div>
       </div>
@@ -516,12 +517,12 @@
           </label>
          
           <label for="user-policy" class="checkbox-description">
-            <input type="checkbox" class="modal-form-check visually-hidden">
+            <input type="checkbox" id="user-policy" class="modal-form-check visually-hidden">
 <span class="checkbox-form"></span>
             I accept the terms and conditions of the&nbsp;
-            <a href="">Privacy Policy</a>
+            <a href="" class="policy-link">Privacy Policy</a>
           </label>
-          <button type="submit" class="modal-form-submit">Send</button>
+          <button type="submit" class="modal-form-submit submit-button">Send</button>
         </form>
       </div>
     </div>
