--- a/portfolio.html
+++ b/portfolio.html
@@ -339,6 +339,24 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="footer-subscribe-paragraph">Subscribe</p>
+          <form class="footer-modal-form-field">
+            <input
+              type="email"
+              name="user-email"
+              class="footer-field-input"
+              required
+              placeholder="E-mail"
+            />
+
+            <button type="submit" class="modal-form-submit">Subscribe
+            <svg class="subscribe-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-telegram"></use>
+            </svg>
+          </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
