--- a/index.html
+++ b/index.html
@@ -444,11 +444,12 @@
               placeholder="E-mail"
             />
 
-            <button type="submit" class="modal-form-submit">Subscribe
-            <svg class="subscribe-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-telegram"></use>
-            </svg>
-          </button>
+            <button type="submit" class="modal-form-submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -515,14 +516,20 @@
               placeholder="Text input"
             ></textarea>
           </label>
-         
+
           <label for="user-policy" class="checkbox-description">
-            <input type="checkbox" id="user-policy" class="modal-form-check visually-hidden">
-<span class="checkbox-form"></span>
+            <input
+              type="checkbox"
+              id="user-policy"
+              class="modal-form-check visually-hidden"
+            />
+            <span class="checkbox-form"></span>
             I accept the terms and conditions of the&nbsp;
             <a href="" class="policy-link">Privacy Policy</a>
           </label>
-          <button type="submit" class="modal-form-submit submit-button">Send</button>
+          <button type="submit" class="modal-form-submit submit-button">
+            Send
+          </button>
         </form>
       </div>
     </div>
